Fix code blocks on smaller screens

--- a/assets/css/components/_blog.scss
+++ b/assets/css/components/_blog.scss
@@ -3,6 +3,7 @@
   code {
     font-size: 1rem;
     background-color: var(--primary-light);
+    overflow-x: auto;
 
     pre & {
       background-color: transparent;
@@ -14,6 +15,7 @@
     padding: 1em 1.5em;
     border-left: 2px solid var(--primary);
     margin-bottom: 1em;
+    overflow-x: auto;
   }
 
   h2, h3 {
